cmake_minimum_required(VERSION 3.0)
project(pattern C)

set(CMAKE_C_STANDARD 99)

add_executable(pattern main.c whiteboard.c)
add_executable(GL_chain chain/GL_chain.c)
add_executable(djstr graph/djstr.c)
add_executable(topo  graph/topo.c)
add_executable(queue_array queue/queue_array.c)
add_executable(queue_circle_array queue/queue_circle_array.c)
add_executable(queue_chain queue/queue_chain.c)
add_executable(stand_sort main.c sort/stand_sort.c)
add_executable(recursort main.c sort/recur_sort.c)
add_executable(fast_sort sort/fast_sort.c)
add_executable(line_sort sort/line_sort.c)
add_executable(btree_fmb tree/btree_fmb.c)
add_executable(bst tree/bst.c tree/heap_app.c)
add_executable(dfs graph/DFS_WFS.c)
add_executable(recur_tree tree/recur_tree.c)
add_executable(heap tree/heap.c tree/heap_app.c)
add_executable(matrix graph/matrix.c)
add_executable(graph graph/graph.c)
add_executable(graph_app graph/graph_app.c)
add_executable(graph_traverse graph/graph.h graph/graph_traverse.c)
add_executable(huffman tree/huffman.c)
add_executable(clue_tree  tree/clue_tree.c)
add_executable(hill_sort sort/hill_sort.c)
add_executable(string_search  search/string_search.c)
add_executable(kmp search/kmp.c)
file (GLOB files *.cpp)
#foreach (file ${files})
#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
#    add_executable (${exe} ${file})
#    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
#endforeach ()